add filter of genres

--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -13,3 +13,12 @@
     }
   }
 }
+
+.select {
+  background: #36353e!important;
+}
+
+.menu, .menu__item,#demo-simple-select {
+  background: #100E19!important;
+}
+
