--- a/src/styles/movies.scss
+++ b/src/styles/movies.scss
@@ -1,4 +1,26 @@
 .movies {
+  &__filter {
+    display: flex;
+    column-gap: 20px;
+    align-items: center;
+    padding: 20px;
+    border-radius: 20px;
+    background: #1f1b2e;
+    margin: 50px 0;
+  }
+  &__select {
+    background: #312b45;
+    border: none;
+    outline: none;
+    ul {
+      padding: 0!important;
+    }
+
+  }
+  &__item {
+    background: #312b45!important;
+  }
+
   &__row {
     display: flex;
     flex-wrap: wrap;
@@ -18,7 +40,7 @@
   background: #36353e!important;
 }
 
-.menu, .menu__item,#demo-simple-select {
-  background: #100E19!important;
+.css-6hp17o-MuiList-root-MuiMenu-list {
+  padding: 0!important;
 }
 
