--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -50,3 +50,19 @@
     border-radius: 8px;
   }
 }
+
+.headerSearch {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99;
+  background: #36353e80;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  input {
+    color: #100E19;
+  }
+}
