--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -58,11 +58,35 @@
   width: 100%;
   height: 100vh;
   z-index: 99;
-  background: #36353e80;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: rgba(0,0,0, 0.9);
+
   input {
     color: #100E19;
+    height: 40px;
+    border-radius: 8px;
+    margin-right: 10px;
+    width: 100%;
+  }
+  &__menu{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 40px;
+    margin-top: 20px;
+    &-item{
+      width: calc(33.33333% - (80px / 3));
+      color: gray;
+    }
+  }
+  &__row{
+    margin: 40px auto 0;
+    display: block;
+    width: 100%;
+    span{
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      cursor: pointer;
+    }
   }
 }
